Integer depracated error fixed